--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -1,4 +1,4 @@
-﻿@string{iccad = "Proc. Int. Conf. on Computer Aided Design (ICCAD)"}
+@string{iccad = "Proc. Int. Conf. on Computer Aided Design (ICCAD)"}
 @string{dac = "Proc. Design Automation Conf. (DAC)"}
 @string{eurodac = "Proc. European Design Automation Conf."}
 @string{date = "Proc. European Design and Test Conf. (DATE)"}
@@ -2215,4 +2215,13 @@ Year={2016}
   pages={3914--3919},
   year={2010},
   organization={IEEE}
+}
+
+@inproceedings{meng:dac'12,
+	title={Optimizing energy efficiency of {3-D} multicore systems with stacked {DRAM} under power and thermal constraints},
+	author={Jie Meng and Katsutoshi Kawakami and Ayse K Coskun},
+	booktitle=dac,
+	pages={648--655},
+	year={2012},
+	organization={ACM}
 }
