--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -814,8 +814,9 @@ url = {http://opencores.org}
 }
 
 @ONLINE{buildingenergydata:Online,
-title = {Building Energy Data Book of DOE},
-url = {https://ieer.org/wp/wp-content/uploads/2012/03/DOE-2011-Buildings-Energy-DataBook-BEDB.pdf},
+title = {Building Energy Data Book of {DOE}},
+OPTurl = {https://ieer.org/wp/wp-content/uploads/2012/03/DOE-2011-Buildings-Energy-DataBook-BEDB.pdf},
+url = {https://buildingsdatabook.eren.doe.gov},
 year = {2012},
 month = {March}
 }
