--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -2226,3 +2226,11 @@ Year={2016}
 	year={2012},
 	organization={ACM}
 }
+
+@inproceedings{Pascanu:ICML'13,
+	title={On the difficulty of training recurrent neural networks},
+	author={Razvan Pascanu and Tomas Mikolov and Yoshua Bengio},
+	booktitle={Proceedings of the International Conference on Machine Learning (ICML)},
+	pages={1310--1318},
+	year={2013},
+}
