--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -2139,10 +2139,10 @@ Year={2016}
   organization={IEEE}
 }
 
-@inproceedings{Pathak:PICCAD'11,
+@inproceedings{Pathak:ICCAD'11,
   title={Electromigration modeling and full-chip reliability analysis for {BEOL} interconnect in {TSV}-based {3D IC}s},
-  author={Mohit Pathak and Jiwoo Pak and David Z.Pan and Sung Kyu Lim},
-  booktitle={Proceedings of the International Conference on Computer-Aided Design},
+  author={Mohit Pathak and Jiwoo Pak and David Z. Pan and Sung Kyu Lim},
+  booktitle=iccad,
   pages={555--562},
   year={2011},
   organization={IEEE Press}
