--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -2106,7 +2106,7 @@ Year={2016}
 
 @inproceedings{Mitra:ECTC'11,
   title={A fast simulation framework for full-chip thermo-mechanical stress and reliability analysis of through-silicon-via based {3D IC}s},
-  author={Joydeep Mitra and Moongon Jung and Suk-Kyu Ryu and Rui Huang and Sung-Kyu Lim and David Z Pan },
+  author={Joydeep Mitra and Moongon Jung and Suk-Kyu Ryu and Rui Huang and Sung-Kyu Lim and David Z. Pan},
   booktitle={Electronic Components and Technology Conference (ECTC)},
   pages={746--753},
   year={2011},
@@ -2123,7 +2123,7 @@ Year={2016}
 
 @inproceedings{Jung:DAC'12,
   title={Chip/package co-analysis of thermo-mechanical stress and reliability in {TSV}-based {3D IC}s},
-  author={Moongon Jung and David Z.Pan and Sung Kyu Lim},
+  author={Moongon Jung and David Z. Pan and Sung Kyu Lim},
   booktitle=dac,
   pages={317--326},
   year={2012},
@@ -2132,7 +2132,7 @@ Year={2016}
 
 @inproceedings{Z.Pan:DAC'12,
   title={Design for manufacturability and reliability for {TSV}-based {3D IC}s},
-  author={David Z.Pan and Sung Kyu Lim and Krit Athikulwongse and Moongon Jung and Joydeep Mitra and Jiwoo Pak and Mohit Pathak and Jae-seok Yang, },
+  author={David Z. Pan and Sung Kyu Lim and Krit Athikulwongse and Moongon Jung and Joydeep Mitra and Jiwoo Pak and Mohit Pathak and Jae-seok Yang, },
   booktitle=dac,
   pages={750--755},
   year={2012},
@@ -2151,7 +2151,7 @@ Year={2016}
 @inproceedings{Li:ICEPT'16,
   title={Investigation on the defect induced thermal mechanical stress for {TSV}},
   author={Fei Li and Chengdi Xiao and Hu He and Junhui Li and Wenhui Zhu},
-  booktitle={Electronic Packaging Technology (ICEPT), 2016 17th International Conference on},
+  booktitle={Electronic Packaging Technology (ICEPT)},
   pages={713--715},
   year={2016},
   organization={IEEE}
