--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -2159,7 +2159,7 @@ Year={2016}
 
 @article{Jiang:MR'13,
   title={Measurement and analysis of thermal stresses in {3D} integrated structures containing through-silicon-vias},
-  author={Tengfei Jiang and Suk-Kyu Ryu and Qiu Zhao and Jay Im and Rui Huang and Paul S Ho},
+  author={Tengfei Jiang and Suk-Kyu Ryu and Qiu Zhao and Jay Im and Rui Huang and Paul S. Ho},
   journal={Microelectronics Reliability},
   volume={53},
   number={1},
@@ -2170,7 +2170,7 @@ Year={2016}
 
 @article{Budiman:MR'12,
   title={Measurement of stresses in {C}u and {S}i around through-silicon via by synchrotron {X}-ray microdiffraction for 3-dimensional integrated circuits},
-  author={A.S.Budiman and H-A-S Shin and B-J Kim and S-H Hwang and H-Y Son and M-S Suh and Q-H Chung and K-Y Byun and N Tamura and M Kunz and others},
+  author={A.S. Budiman and H.-A.-S. Shin and B.-J. Kim and S.-H. Hwang and H.-Y. Son and M.-S. Suh and Q.-H. Chung and K.-Y. Byun and N. Tamura and M. Kunz and Y.-C. Joo},
   journal={Microelectronics Reliability},
   volume={52},
   number={3},
@@ -2201,7 +2201,7 @@ Year={2016}
 
 @article{Saettler:ME'15,
   title={$\mu$-{R}aman spectroscopy and {FE}-modeling for {TSV}-stress-characterization},
-  author={P Saettler and M Hecker and M Boettcher and C Rudolph and KJ Wolter},
+  author={P. Saettler and M. Hecker and M. Boettcher and C. Rudolph and K.J. Wolter},
   journal={Microelectronic Engineering},
   volume={137},
   pages={105--110},
