--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -1,4 +1,4 @@
-@string{iccad = "Proc. Int. Conf. on Computer Aided Design (ICCAD)"}
+﻿@string{iccad = "Proc. Int. Conf. on Computer Aided Design (ICCAD)"}
 @string{dac = "Proc. Design Automation Conf. (DAC)"}
 @string{eurodac = "Proc. European Design Automation Conf."}
 @string{date = "Proc. European Design and Test Conf. (DATE)"}
@@ -1844,7 +1844,6 @@ Year={2016}
   booktitle={Workshop on Modeling and Simulation of Cyber-Physical Energy Systems (MSCPES)},
   pages={1--6},
   year={2015},
-  organization={IEEE}
 }
 
 @article{Kasahara:AT'99,
@@ -1950,7 +1949,6 @@ Year={2016}
   booktitle={International Conference on Control Automation Robotics \& Vision (ICARCV)},
   pages={750--755},
   year={2010},
-  organization={IEEE}
 }
 
 @inproceedings{Ma:ISGT'11,
@@ -1959,7 +1957,6 @@ Year={2016}
   booktitle={Innovative Smart Grid Technologies (ISGT)},
   pages={1--6},
   year={2011},
-  organization={IEEE}
 }
 
 @inproceedings{Leduc:IITC'07,
@@ -2016,7 +2013,6 @@ Year={2016}
   volume={3},
   pages={1521--1526},
   year={1999},
-  organization={IEEE}
 }
 
 @article{Tanoto:TELKOMNIKA'13,
@@ -2215,7 +2211,6 @@ Year={2016}
   booktitle=cdc,
   pages={3914--3919},
   year={2010},
-  organization={IEEE}
 }
 
 @inproceedings{meng:dac'12,
@@ -2233,4 +2228,14 @@ Year={2016}
 	booktitle={Proceedings of the International Conference on Machine Learning (ICML)},
 	pages={1310--1318},
 	year={2013},
+}
+
+@article{Pal:IJCC'08,
+  title={{Self-tuning fuzzy PI controller and its application to HVAC systems}},
+  author={A K Paland and R K Mudi},
+  journal={International journal of computational cognition},
+  volume={6},
+  number={1},
+  pages={25--30},
+  year={2008}
 }
