--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -1,4 +1,4 @@
-﻿@string{iccad = "Proc. Int. Conf. on Computer Aided Design (ICCAD)"}
+@string{iccad = "Proc. Int. Conf. on Computer Aided Design (ICCAD)"}
 @string{dac = "Proc. Design Automation Conf. (DAC)"}
 @string{eurodac = "Proc. European Design Automation Conf."}
 @string{date = "Proc. European Design and Test Conf. (DATE)"}
@@ -2238,4 +2238,11 @@ Year={2016}
   number={1},
   pages={25--30},
   year={2008}
+}
+
+@article{jedec:JEDEC'03,
+	title={Failure mechanisms and models for semiconductor devices},
+	author={JEDEC Solid State Technology Association and others},
+	journal={JEDEC Publication JEP122-B},
+	year={2003}
 }
