--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -1,4 +1,4 @@
-@string{iccad = "Proc. Int. Conf. on Computer Aided Design (ICCAD)"}
+﻿@string{iccad = "Proc. Int. Conf. on Computer Aided Design (ICCAD)"}
 @string{dac = "Proc. Design Automation Conf. (DAC)"}
 @string{eurodac = "Proc. European Design Automation Conf."}
 @string{date = "Proc. European Design and Test Conf. (DATE)"}
@@ -1793,7 +1793,7 @@ Year={2016}
 	publisher={IEEE}
 }
 
-@book{Overschee:Book'2012,
+@book{Overschee:Book'12,
   title={{Subspace identification for linear systems: Theory-Implementation-Applications}},
   author={Peter Van Overschee and BL De Moor},
   year={2012},
@@ -2047,7 +2047,7 @@ Year={2016}
   publisher={IEEE}
 }
 
-@article{Yao:TIE'2015,
+@article{Yao:TIE'15,
   title={Power admission control with predictive thermal management in smart buildings},
   author={Jianguo Yao and Giuseppe Tommaso Costanzo and Guchuan Zhu and Bin Wen},
   journal={IEEE Transactions on Industrial Electronics},
