--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -2246,3 +2246,154 @@ Year={2016}
 	journal={JEDEC Publication JEP122-B},
 	year={2003}
 }
+
+@article{kim:CAL'15,
+  title={A performance-energy model to evaluate single thread execution acceleration},
+  author={Seung Hun Kim and Dohoon Kim and Changmin Lee and Won Seob Jeong and Won Woo Ro and Jean-Luc Gaudiot},
+  journal={IEEE Computer Architecture Letters},
+  volume={14},
+  number={2},
+  pages={99--102},
+  year={2015},
+  publisher={IEEE}
+}
+
+@article{woo:Computer'08,
+  title={Extending Amdahl's law for energy-efficient computing in the many-core era},
+  author={Dong Hyuk Woo and Hsien-Hsin S. Lee },
+  journal={Computer},
+  volume={41},
+  number={12},
+  year={2008},
+  publisher={IEEE}
+}
+
+@article{karanikolaou:JS'14,
+  title={Performance scalability and energy consumption on distributed and many-core platforms},
+  author={EM Karanikolaou and EI  Milovanovi{\'c} and I{\v{Z}} Milovanovi{\'c} and MP Bekakos},
+  journal={The Journal of Supercomputing},
+  volume={70},
+  number={1},
+  pages={349--364},
+  year={2014},
+  publisher={Springer}
+}
+
+@inproceedings{ge:PDPS'07,
+  title={Power-aware speedup},
+  author={Rong Ge and Kirk W Cameron},
+  booktitle={Parallel and Distributed Processing Symposium, 2007. IPDPS 2007. IEEE International},
+  pages={1--10},
+  year={2007},
+  organization={IEEE}
+}
+
+@inproceedings{sawalha:GTC'12,
+  title={Energy-efficient phase-aware scheduling for heterogeneous multicore processors},
+  author={Lina Sawalha and Ronald D Barnes},
+  booktitle={Green Technologies Conference, 2012 IEEE},
+  pages={1--6},
+  year={2012},
+  organization={IEEE}
+}
+
+@inproceedings{lukefahr:ICPAC'14,
+  title={Heterogeneous microarchitectures trump voltage scaling for low-power cores},
+  author={Andrew Lukefahr and Shruti Padmanabha and Reetuparna Das and Ronald Dreslinski Jr and Thomas F Wenisch and Scott Mahlke},
+  booktitle={Proceedings of the 23rd international conference on Parallel architectures and compilation},
+  pages={237--250},
+  year={2014},
+  organization={ACM}
+}
+
+@inproceedings{wang:ISPA'10,
+  title={Power-efficient work distribution method for CPU-GPU heterogeneous system},
+  author={Guibin Wang and Xiaoguang Ren},
+  booktitle={Parallel and Distributed Processing with Applications (ISPA), 2010 International Symposium on},
+  pages={122--129},
+  year={2010},
+  organization={IEEE}
+}
+
+@article{che:JPDC'14,
+  title={Amdahl’s law for multithreaded multicore processors},
+  author={Hao Che and Minh Nguyen},
+  journal={Journal of Parallel and Distributed Computing},
+  volume={74},
+  number={10},
+  pages={3056--3069},
+  year={2014},
+  publisher={Elsevier}
+}
+
+@article{cho:CAL'08,
+  title={Corollaries to Amdahl's law for energy},
+  author={Sangyeun Cho and Rami Melhem},
+  journal={IEEE Computer Architecture Letters},
+  volume={7},
+  number={1},
+  pages={25--28},
+  year={2008},
+  publisher={IEEE}
+}
+
+@article{sun:JPDC'10,
+  title={Reevaluating Amdahl’s law in the multicore era},
+  author={Xian-He Sun and Yong Chen},
+  journal={Journal of Parallel and Distributed Computing},
+  volume={70},
+  number={2},
+  pages={183--188},
+  year={2010},
+  publisher={Elsevier}
+}
+
+@article{hill:Computer'08,
+  title={Amdahl's law in the multicore era},
+  author={Mark D Hill and Michael R Marty},
+  journal={Computer},
+  volume={41},
+  number={7},
+  year={2008},
+  publisher={IEEE}
+}
+
+@article{xian:tcad'08,
+  title={Dynamic voltage scaling for multitasking real-time systems with uncertain execution time},
+  author={Changjiu Xian and Yung-Hsiang Lu and Zhiyuan Li},
+  journal=tcad,
+  volume={27},
+  number={8},
+  pages={1467--1478},
+  year={2008},
+  publisher={IEEE}
+}
+
+@inproceedings{gandhi:ASPER'09,
+  title={Optimal power allocation in server farms},
+  author={Anshul Gandhi and Mor Harchol-Balter and Rajarshi Das and Charles Lefurgy},
+  booktitle={ACM SIGMETRICS Performance Evaluation Review},
+  volume={37},
+  number={1},
+  pages={157--168},
+  year={2009},
+  organization={ACM}
+}
+
+@inproceedings{kong:DATE'11,
+  title={Energy-efficient scheduling of real-time tasks on cluster-based multicores},
+  author={Fanxin Kong and Wang Yi and Qingxu Deng},
+  booktitle={Design, Automation \& Test in Europe Conference \& Exhibition (DATE), 2011},
+  pages={1--6},
+  year={2011},
+  organization={IEEE}
+}
+
+@inproceedings{wang:ICC'10,
+  title={Towards energy aware scheduling for precedence constrained parallel tasks in a cluster with DVFS},
+  author={Lizhe Wang and Gregor Von Laszewski and Jay Dayal and Fugang Wang},
+  booktitle={Proceedings of the 2010 10th IEEE/ACM International Conference on Cluster, Cloud and Grid Computing},
+  pages={368--377},
+  year={2010},
+  organization={IEEE Computer Society}
+}
