--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -2397,3 +2397,13 @@ Year={2016}
   year={2010},
   organization={IEEE Computer Society}
 }
+
+@article{wang:access'17,
+  title={A dvfs based energy-efficient tasks scheduling in a data center},
+  author={Songyun Wang and Zhuzhong Qian and Jiabin Yuan and Ilsun You},
+  journal={IEEE Access},
+  volume={5},
+  pages={13090--13102},
+  year={2017},
+  publisher={IEEE}
+}
