--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -2407,3 +2407,11 @@ Year={2016}
   year={2017},
   publisher={IEEE}
 }
+
+@inproceedings{Molina:CIIM'14,
+  title={Model identification of a tropical hotel suite room},
+  author={Luis M Castellanos Molina and Boris G Vega Lara and Jos{\'e} P Monteagudo Yanes},
+  booktitle={Engineering Mechatronics and Automation (CIIMA), 2014 III International Congress of},
+  pages={1--5},
+  year={2014},
+}
