--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -2411,7 +2411,7 @@ Year={2016}
 @inproceedings{Molina:CIIM'14,
   title={Model identification of a tropical hotel suite room},
   author={Luis M Castellanos Molina and Boris G Vega Lara and Jos{\'e} P Monteagudo Yanes},
-  booktitle={Engineering Mechatronics and Automation (CIIMA), 2014 III International Congress of},
+  booktitle={III International Congress of Engineering Mechatronics and Automation (CIIMA)},
   pages={1--5},
   year={2014},
 }
