--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -2260,7 +2260,7 @@ Year={2016}
 
 @article{woo:Computer'08,
   title={Extending Amdahl's law for energy-efficient computing in the many-core era},
-  author={Dong Hyuk Woo and Hsien-Hsin S. Lee },
+  author={Dong Hyuk Woo and Hsien-Hsin S. Lee},
   journal={Computer},
   volume={41},
   number={12},
@@ -2414,4 +2414,13 @@ Year={2016}
   booktitle={III International Congress of Engineering Mechatronics and Automation (CIIMA)},
   pages={1--5},
   year={2014},
+}
+
+@inproceedings{borkar:dac'07,
+  title={Thousand core chips: a technology perspective},
+  author={Shekhar Borkar},
+  booktitle=dac,
+  pages={746--749},
+  year={2007},
+  organization={ACM}
 }
