--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -2425,3 +2425,14 @@ Year={2016}
   year={2007},
   organization={ACM}
 }
+
+@article{tu:MR'11,
+	title={Reliability challenges in {3D IC} packaging technology},
+	author={King Ning Tu},
+	journal={Microelectronics Reliability},
+	volume={51},
+	number={3},
+	pages={517--523},
+	year={2011},
+	publisher={Elsevier}
+}
