--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -2436,3 +2436,12 @@ Year={2016}
 	year={2011},
 	publisher={Elsevier}
 }
+
+@inproceedings{yang:DAC'10,
+	title={{TSV} stress aware timing analysis with applications to {3D-IC} layout optimization},
+	author={Jae-Seok Yang and Krit Athikulwongse and Young-Joon Lee and Sung Kyu Lim and David Z. Pan},
+	booktitle=dac,
+	pages={803--806},
+	year={2010},
+	organization={ACM}
+}
