--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -1,4 +1,4 @@
-@string{iccad = "Proc. Int. Conf. on Computer Aided Design (ICCAD)"}
+﻿@string{iccad = "Proc. Int. Conf. on Computer Aided Design (ICCAD)"}
 @string{dac = "Proc. Design Automation Conf. (DAC)"}
 @string{eurodac = "Proc. European Design Automation Conf."}
 @string{date = "Proc. European Design and Test Conf. (DATE)"}
@@ -2058,7 +2058,7 @@ Year={2016}
   publisher={IEEE}
 }
 
-@article{Wang:tcasI'2006,
+@article{Wang:TCASI'06,
   title={A fully automated recurrent neural network for unknown dynamic system identification and control},
   author={Jeen-Shing Wang and Yen-Ping Chen},
   journal=tcasI,
@@ -2069,18 +2069,7 @@ Year={2016}
   publisher={IEEE}
 }
 
-@article{Eguia:tvlsi'2012,
-  title={General parameterized thermal modeling for high-performance microprocessor design},
-  author={Thom J Eguia and Sheldon X-D Tan and Ruijing Tan and Duo Li and Eduardo H Pacheco and Murli Tirumala and Lingli Wang},
-  journal=tvlsi,
-  volume={20},
-  number={2},
-  pages={211--224},
-  year={2012},
-  publisher={IEEE}
-}
-
-@article{Pan:TIE'2012,
+@article{Pan:TIE'12,
   title={Model predictive control of unknown nonlinear dynamical systems based on recurrent neural networks},
   author={Yunpeng Pan and Jun Wang},
   journal={IEEE Transactions on Industrial Electronics},
@@ -2444,4 +2433,14 @@ Year={2016}
 	pages={803--806},
 	year={2010},
 	organization={ACM}
+}
+
+@article{Mantovani:TIE'15,
+  title={Temperature control of a commercial building with model predictive control techniques},
+  author={Giancarlo Mantovani and Luca Ferrarini},
+  journal={IEEE Transactions on Industrial Electronics},
+  volume={62},
+  number={4},
+  pages={2651--2660},
+  year={2015},
 }
