--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -1,4 +1,4 @@
-﻿@string{iccad = "Proc. Int. Conf. on Computer Aided Design (ICCAD)"}
+@string{iccad = "Proc. Int. Conf. on Computer Aided Design (ICCAD)"}
 @string{dac = "Proc. Design Automation Conf. (DAC)"}
 @string{eurodac = "Proc. European Design Automation Conf."}
 @string{date = "Proc. European Design and Test Conf. (DATE)"}
@@ -2443,4 +2443,11 @@ Year={2016}
   number={4},
   pages={2651--2660},
   year={2015},
+}
+
+@phdthesis{srinivasan:THESIS'06,
+	title={Lifetime reliability aware microprocessors},
+	author={Jayanth Srinivasan},
+	school={University of Illinois at Urbana-Champaign},
+	year={2006}
 }
