--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -1,4 +1,4 @@
-@string{iccad = "Proc. Int. Conf. on Computer Aided Design (ICCAD)"}
+﻿@string{iccad = "Proc. Int. Conf. on Computer Aided Design (ICCAD)"}
 @string{dac = "Proc. Design Automation Conf. (DAC)"}
 @string{eurodac = "Proc. European Design Automation Conf."}
 @string{date = "Proc. European Design and Test Conf. (DATE)"}
@@ -1848,7 +1848,7 @@ Year={2016}
 
 @article{Kasahara:AT'99,
   title={{Design and tuning of robust PID controller for HVAC systems}},
-  author={Masato Kasahara and Tadahiko Matsuba and Yoshiaki Kuzuu and Takanori Yamazakiand Yukihiro Hashimoto and others},
+  author={Masato Kasahara and Tadahiko Matsuba and Yoshiaki Kuzuu and Takanori Yamazaki and Yukihiro Hashimoto and Kazuyuki Kamimura},
   journal={ASHRAE Transactions},
   volume={105},
   pages={154},
