--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -1,4 +1,4 @@
-﻿@string{iccad = "Proc. Int. Conf. on Computer Aided Design (ICCAD)"}
+@string{iccad = "Proc. Int. Conf. on Computer Aided Design (ICCAD)"}
 @string{dac = "Proc. Design Automation Conf. (DAC)"}
 @string{eurodac = "Proc. European Design Automation Conf."}
 @string{date = "Proc. European Design and Test Conf. (DATE)"}
@@ -2450,4 +2450,26 @@ Year={2016}
 	author={Jayanth Srinivasan},
 	school={University of Illinois at Urbana-Champaign},
 	year={2006}
+}
+
+@article{zanini:ESTCS'11,
+	title={Hierarchical thermal management policy for high-performance {3D} systems with liquid cooling},
+	author={Francesco Zanini and Mohamed M Sabry and David Atienza and Giovanni De Micheli},
+	journal={IEEE Journal on Emerging and Selected Topics in Circuits and Systems},
+	volume={1},
+	number={2},
+	pages={88--101},
+	year={2011},
+	publisher={IEEE}
+}
+
+@article{kang:TCAD'11,
+	title={Runtime power management of {3-D} multi-core architectures under peak power and temperature constraints},
+	author={Kyungsu Kang and Jungsoo Kim and Sungjoo Yoo and Chong-Min Kyung},
+	journal=tcad,
+	volume={30},
+	number={6},
+	pages={905--918},
+	year={2011},
+	publisher={IEEE}
 }
