--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -1,4 +1,4 @@
-@string{iccad = "Proc. Int. Conf. on Computer Aided Design (ICCAD)"}
+﻿@string{iccad = "Proc. Int. Conf. on Computer Aided Design (ICCAD)"}
 @string{dac = "Proc. Design Automation Conf. (DAC)"}
 @string{eurodac = "Proc. European Design Automation Conf."}
 @string{date = "Proc. European Design and Test Conf. (DATE)"}
@@ -2424,6 +2424,13 @@ Year={2016}
 	pages={517--523},
 	year={2011},
 	publisher={Elsevier}
+}
+
+@Book{Ogata:Book'87,
+Author={Katsuhiko Ogata},
+Title={Discrete-time control systems},
+Publisher={Prentice-Hall},
+Year={1987}
 }
 
 @inproceedings{yang:DAC'10,
