--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -47,6 +47,15 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % publications from our lab
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+@ARTICLE{WangWan:TOC'18,
+	author = {Hai Wang and Jiachun Wan and Sheldon X.-D. Tan and Chi Zhang and He Tang and Yuan Yuan and Keheng Huang and Zhenghong Zhang},
+	journal = toc,
+	title = {A Fast Leakage-Aware Full-Chip Transient Thermal Estimation Method},
+	year = {2018},
+}
+
+
+
 @inproceedings{WanWang:ICSICT'16,
  author = {Jiachun Wan and Hai Wang and Sheldon X.-D. Tan and Chi Zhang and Yuan Yuan and Keheng Huang and Zhenghong Zhang},
  title = {A Fast Full-Chip Static Power Estimation Method},
