--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -1,4 +1,4 @@
-﻿@string{iccad = "Proc. Int. Conf. on Computer Aided Design (ICCAD)"}
+@string{iccad = "Proc. Int. Conf. on Computer Aided Design (ICCAD)"}
 @string{dac = "Proc. Design Automation Conf. (DAC)"}
 @string{eurodac = "Proc. European Design Automation Conf."}
 @string{date = "Proc. European Design and Test Conf. (DATE)"}
@@ -2488,4 +2488,13 @@ Year={1987}
 	pages={905--918},
 	year={2011},
 	publisher={IEEE}
+}
+
+@inproceedings{karl:DAC'06,
+	title={Reliability modeling and management in dynamic microprocessor-based systems},
+	author={Eric Karl and David Blaauw and Dennis Sylvester and Trevor Mudge},
+	booktitle=dac,
+	pages={1057--1060},
+	year={2006},
+	organization={ACM}
 }
