--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -2507,3 +2507,14 @@ Year={1987}
 	year={2010},
 	organization={ACM}
 }
+
+@article{yamamoto:MM'14,
+	title={Unified reliability estimation and management of {NoC} based chip multiprocessors},
+	author={Alexandre Yasuo Yamamoto and Cristinel Ababei},
+	journal={Microprocessors and Microsystems},
+	volume={38},
+	number={1},
+	pages={53--63},
+	year={2014},
+	publisher={Elsevier}
+}
