--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -2501,7 +2501,7 @@ Year={1987}
 
 @inproceedings{xiang:CODES'10,
 	title={System-level reliability modeling for {MPSoCs}},
-	author={Yun Xiang and Thidapat Chantem and Robert P Dick and X Sharon Hu and Li Shang},
+	author={Yun Xiang and Thidapat Chantem and Robert P. Dick and X. Sharon Hu and Li Shang},
 	booktitle={Proceedings of the eighth IEEE/ACM/IFIP international conference on Hardware/software codesign and system synthesis},
 	pages={297--306},
 	year={2010},
