--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -2518,3 +2518,52 @@ Year={1987}
 	year={2014},
 	publisher={Elsevier}
 }
+
+@article{lu:TVLSI'07,
+	title={Interconnect lifetime prediction for reliability-aware systems},
+	author={Zhijian Lu and Wei Huang and Mircea R. Stan and Kevin Skadron and John Lach},
+	journal=tvlsi,
+	volume={15},
+	number={2},
+	pages={159--172},
+	year={2007},
+	publisher={IEEE}
+}
+
+@inproceedings{shin:CDSN'07,
+	title={A framework for architecture-level lifetime reliability modeling},
+	author={Jeonghee Shin and Victor Zyuban and Zhigang Hu and Jude A. Rivers and Pradip Bose},
+	booktitle={Dependable Systems and Networks, 2007. DSN'07. 37th Annual IEEE/IFIP International Conference on},
+	pages={534--543},
+	year={2007},
+	organization={IEEE}
+}
+
+@article{coskun:JLPE'06,
+	title={Analysis and optimization of {MPSoC} reliability},
+	author={Ayse Kivilcim Coskun and Tajana Simunic Rosing and Kresimir Mihic and Giovanni De Micheli and  Yusuf Leblebici},
+	journal={Journal of Low Power Electronics},
+	volume={2},
+	number={1},
+	pages={56--69},
+	year={2006},
+	publisher={American Scientific Publishers}
+}
+
+@inproceedings{huang:SDC'08,
+	title={On modeling the lifetime reliability of homogeneous manycore systems},
+	author={Lin Huang and Qiang Xu},
+	booktitle={Dependable Computing, 2008. PRDC'08. 14th IEEE Pacific Rim International Symposium on},
+	pages={87--94},
+	year={2008},
+	organization={IEEE}
+}
+
+@inproceedings{wang:ISQED'10,
+	title={Thermal-aware lifetime reliability in multicore systems},
+	author={Shengquan Wang and Jian-Jia Chen},
+	booktitle=isqed,
+	pages={399--405},
+	year={2010},
+	organization={IEEE}
+}
