--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -2567,3 +2567,14 @@ Year={1987}
 	year={2010},
 	organization={IEEE}
 }
+
+@Article{Skadron:MICRO'03,
+  author =       {Kevin Skadron and Mircea R. Stan and Wei Huang and Sivakumar Velusamy and Karthik Sankaranarayanan and David Tarjan},
+  title =        {Temperature-aware computer systems: opportunities and challenges},
+  journal =      {IEEE Micro},
+  year =         {2003},
+  pages =    {52--61},
+  volume = {23},
+  number = {6},
+  month = {November-December},
+}
