--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -2382,7 +2382,7 @@ Year={2016}
 @inproceedings{kong:DATE'11,
   title={Energy-efficient scheduling of real-time tasks on cluster-based multicores},
   author={Fanxin Kong and Wang Yi and Qingxu Deng},
-  booktitle={Design, Automation \& Test in Europe Conference \& Exhibition (DATE), 2011},
+  booktitle=date,
   pages={1--6},
   year={2011},
   organization={IEEE}
