--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -2578,3 +2578,12 @@ Year={1987}
   number = {6},
   month = {November-December},
 }
+
+@inproceedings{Yeo:DAC'08,
+ author = {Inchoon Yeo and Chih Chun Liu and Eun Jung Kim},
+ title = {Predictive dynamic thermal management for multicore systems},
+ booktitle = dac,
+ year = {2008},
+ pages = {734--739},
+ location = {Anaheim, CA},
+ }
