--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -2211,7 +2211,7 @@ Year={2016}
   year={2010},
 }
 
-@inproceedings{meng:dac'12,
+@inproceedings{Meng:dac'12,
 	title={Optimizing energy efficiency of {3-D} multicore systems with stacked {DRAM} under power and thermal constraints},
 	author={Jie Meng and Katsutoshi Kawakami and Ayse K Coskun},
 	booktitle=dac,
@@ -2239,7 +2239,7 @@ Year={2016}
 }
 
 
-@techreport{jedec:JEDEC'03,
+@techreport{Jedec:JEDEC'03,
 	title = {Failure mechanisms and models for semiconductor devices},
 	institution = {JEDEC Solid State Technology Association},
 	year = {2003},
@@ -2424,7 +2424,7 @@ Year={2016}
   organization={ACM}
 }
 
-@article{tu:MR'11,
+@article{Tu:MR'11,
 	title={Reliability challenges in {3D IC} packaging technology},
 	author={King Ning Tu},
 	journal={Microelectronics Reliability},
@@ -2442,7 +2442,7 @@ Publisher={Prentice-Hall},
 Year={1987}
 }
 
-@inproceedings{yang:DAC'10,
+@inproceedings{Yang:DAC'10,
 	title={{TSV} stress aware timing analysis with applications to {3D-IC} layout optimization},
 	author={Jae-Seok Yang and Krit Athikulwongse and Young-Joon Lee and Sung Kyu Lim and David Z. Pan},
 	booktitle=dac,
@@ -2461,14 +2461,14 @@ Year={1987}
   year={2015},
 }
 
-@phdthesis{srinivasan:THESIS'06,
+@phdthesis{Srinivasan:THESIS'06,
 	title={Lifetime reliability aware microprocessors},
 	author={Jayanth Srinivasan},
 	school={University of Illinois at Urbana-Champaign},
 	year={2006}
 }
 
-@article{zanini:ESTCS'11,
+@article{Zanini:ESTCS'11,
 	title={Hierarchical thermal management policy for high-performance {3D} systems with liquid cooling},
 	author={Francesco Zanini and Mohamed M Sabry and David Atienza and Giovanni De Micheli},
 	journal={IEEE Journal on Emerging and Selected Topics in Circuits and Systems},
@@ -2479,7 +2479,7 @@ Year={1987}
 	publisher={IEEE}
 }
 
-@article{kang:TCAD'11,
+@article{Kang:TCAD'11,
 	title={Runtime power management of {3-D} multi-core architectures under peak power and temperature constraints},
 	author={Kyungsu Kang and Jungsoo Kim and Sungjoo Yoo and Chong-Min Kyung},
 	journal=tcad,
@@ -2490,7 +2490,7 @@ Year={1987}
 	publisher={IEEE}
 }
 
-@inproceedings{karl:DAC'06,
+@inproceedings{Karl:DAC'06,
 	title={Reliability modeling and management in dynamic microprocessor-based systems},
 	author={Eric Karl and David Blaauw and Dennis Sylvester and Trevor Mudge},
 	booktitle=dac,
@@ -2499,7 +2499,7 @@ Year={1987}
 	organization={ACM}
 }
 
-@inproceedings{xiang:CODES'10,
+@inproceedings{Xiang:CODES'10,
 	title={System-level reliability modeling for {MPSoCs}},
 	author={Yun Xiang and Thidapat Chantem and Robert P. Dick and X. Sharon Hu and Li Shang},
 	booktitle={Proceedings of the eighth IEEE/ACM/IFIP international conference on Hardware/software codesign and system synthesis},
@@ -2508,7 +2508,7 @@ Year={1987}
 	organization={ACM}
 }
 
-@article{yamamoto:MM'14,
+@article{Yamamoto:MM'14,
 	title={Unified reliability estimation and management of {NoC} based chip multiprocessors},
 	author={Alexandre Yasuo Yamamoto and Cristinel Ababei},
 	journal={Microprocessors and Microsystems},
@@ -2519,7 +2519,7 @@ Year={1987}
 	publisher={Elsevier}
 }
 
-@article{lu:TVLSI'07,
+@article{Lu:TVLSI'07,
 	title={Interconnect lifetime prediction for reliability-aware systems},
 	author={Zhijian Lu and Wei Huang and Mircea R. Stan and Kevin Skadron and John Lach},
 	journal=tvlsi,
@@ -2530,7 +2530,7 @@ Year={1987}
 	publisher={IEEE}
 }
 
-@inproceedings{shin:CDSN'07,
+@inproceedings{Shin:CDSN'07,
 	title={A framework for architecture-level lifetime reliability modeling},
 	author={Jeonghee Shin and Victor Zyuban and Zhigang Hu and Jude A. Rivers and Pradip Bose},
 	booktitle={Dependable Systems and Networks, 2007. DSN'07. 37th Annual IEEE/IFIP International Conference on},
@@ -2539,7 +2539,7 @@ Year={1987}
 	organization={IEEE}
 }
 
-@article{coskun:JLPE'06,
+@article{Coskun:JLPE'06,
 	title={Analysis and optimization of {MPSoC} reliability},
 	author={Ayse Kivilcim Coskun and Tajana Simunic Rosing and Kresimir Mihic and Giovanni De Micheli and  Yusuf Leblebici},
 	journal={Journal of Low Power Electronics},
@@ -2550,7 +2550,7 @@ Year={1987}
 	publisher={American Scientific Publishers}
 }
 
-@inproceedings{huang:SDC'08,
+@inproceedings{Huang:SDC'08,
 	title={On modeling the lifetime reliability of homogeneous manycore systems},
 	author={Lin Huang and Qiang Xu},
 	booktitle={Dependable Computing, 2008. PRDC'08. 14th IEEE Pacific Rim International Symposium on},
@@ -2559,7 +2559,7 @@ Year={1987}
 	organization={IEEE}
 }
 
-@inproceedings{wang:ISQED'10,
+@inproceedings{Wang:ISQED'10,
 	title={Thermal-aware lifetime reliability in multicore systems},
 	author={Shengquan Wang and Jian-Jia Chen},
 	booktitle=isqed,
