--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -2211,7 +2211,7 @@ Year={2016}
   year={2010},
 }
 
-@inproceedings{Meng:dac'12,
+@inproceedings{Meng:DAC'12,
 	title={Optimizing energy efficiency of {3-D} multicore systems with stacked {DRAM} under power and thermal constraints},
 	author={Jie Meng and Katsutoshi Kawakami and Ayse K Coskun},
 	booktitle=dac,
