--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -605,6 +605,8 @@ month ={June.},
   booktitle={Proc. Electronic Components and Technology Conference (ECTC)},
   pages={635--640},
   year={2009},
+  month =  {May},
+  location = {San Diego, CA},
 }
 
 @inproceedings{Lu:ECTC'09,
@@ -613,6 +615,8 @@ month ={June.},
   booktitle={Proc. Electronic Components and Technology Conference (ECTC)},
   pages={630--634},
   year={2009},
+  month={May},
+  location={San Diego, CA},
 }
 
 @inproceedings{Xin:CASoN'10,
@@ -1718,10 +1722,11 @@ Year={2016}
 @inproceedings{Wang:ASICON'01,
 	title={A thermal model for the top layer of {3D} integrated circuits considering through silicon vias},
 	author={Fengjuan Wang and Zhangming Zhu and Yintang Yang and Ning Wang},
-	booktitle={ASIC (ASICON), 2011 IEEE 9th International Conference on},
+	booktitle={Proc. IEEE International Conference on ASIC},
 	pages={618--620},
 	year={2011},
-	organization={IEEE}
+	month={Oct},
+	location = {Xiamen, China},
 }
 
 @inproceedings{Chen:ISLPED'11,
@@ -1730,7 +1735,8 @@ Year={2016}
 	booktitle=islped,
 	pages={397--402},
 	year={2011},
-	organization={IEEE Press}
+	month={August},
+	location = {Fukuoka, Japan},
 }
 
 @inproceedings{Cong:ASPDAC'07,
@@ -1739,7 +1745,7 @@ Year={2016}
 	booktitle=aspdac,
 	pages={780--785},
 	year={2007},
-	organization={IEEE}
+	month={January},
 }
 
 @inproceedings{Cong:DAC'11,
@@ -1748,7 +1754,8 @@ Year={2016}
 	booktitle=dac,
 	pages={670--675},
 	year={2011},
-	organization={ACM}
+	month={June},
+	location = {San Diego, CA},
 }
 
 @inproceedings{Athikulwongse:ICCAD'10,
@@ -1757,7 +1764,8 @@ Year={2016}
 	booktitle=iccad,
 	pages={669--674},
 	year={2010},
-	organization={IEEE Press}
+	month={November},
+	location = {San Jose, CA},
 }
 
 @article{Zou:TVLSI'17,
@@ -1844,7 +1852,8 @@ Year={2016}
 	booktitle=date,
 	pages={1410--1415},
 	year={2009},
-	organization={European Design and Automation Association}
+	month = {April},
+	location = {Nice, France},
 }
 
 @inproceedings{Li:MSCPES'15,
@@ -1971,10 +1980,11 @@ Year={2016}
 @inproceedings{Leduc:IITC'07,
 	title={Challenges for {3D IC} integration: bonding quality and thermal management},
 	author={Patrick Leduc and Francois de Crecy and Murielle Fayolle and Barbara Charlet and Thierry Enot and Marc Zussy and Bob Jones and Jean-Charles Barbe and Nelly Kernevez and Nicolas Sillon and others},
-	booktitle={International Interconnect Technology Conference, IEEE 2007},
+	booktitle={Proc. IEEE International Interconnect Technology Conferencee},
 	pages={210--212},
 	year={2007},
-	organization={IEEE}
+	month={June},
+	location = {Burlingame, CA},
 }
 
 @inproceedings{Puttaswamy:GLVLSI'06,
@@ -1983,7 +1993,8 @@ Year={2016}
 	booktitle=glvlsi,
 	pages={19--24},
 	year={2006},
-	organization={ACM}
+	month={April},
+	location = {Philadelphia, PA},
 }
 
 @article{Todri:TVLSI'13,
@@ -2003,7 +2014,8 @@ Year={2016}
 	booktitle=aspdac,
 	pages={750--755},
 	year={2012},
-	organization={IEEE}
+	month={Jan},
+	location={Sydney, Australia},
 }
 
 @inproceedings{Yu:ISQED'12,
@@ -2012,7 +2024,8 @@ Year={2016}
 	booktitle=isqed,
 	pages={216--222},
 	year={2012},
-	organization={IEEE}
+	month={March},
+	location={Santa Clara, CA},
 }
 
 @inproceedings{Chan:IJCNN'99,
@@ -2448,7 +2461,8 @@ Year={1987}
 	booktitle=dac,
 	pages={803--806},
 	year={2010},
-	organization={ACM}
+	month={June},
+	location={Anaheim, California},
 }
 
 @article{Mantovani:TIE'15,
