--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -713,11 +713,11 @@ month ={June.},
   author={Robert S. Patti},
   title={Three-Dimensional Integrated Circuits and the Future of System-on-Chip Designs},
   journal =  ieeeproc,
-  year={2006},
   volume = {94},
   number = {6},
   pages = {1214--1224},
-  month =  {June}
+  year={2006},
+  month =  {June},
 }
 
 @article{Jung:TCAD'12,
@@ -2510,16 +2510,18 @@ Year={1987}
 	booktitle=dac,
 	pages={1057--1060},
 	year={2006},
-	organization={ACM}
+	month={July},
+	location={San Francisco, CA},
 }
 
 @inproceedings{Xiang:CODES'10,
 	title={System-level reliability modeling for {MPSoCs}},
 	author={Yun Xiang and Thidapat Chantem and Robert P. Dick and X. Sharon Hu and Li Shang},
-	booktitle={Proceedings of the eighth IEEE/ACM/IFIP international conference on Hardware/software codesign and system synthesis},
+	booktitle={Proc. International conference on Hardware/software codesign and system synthesis},
 	pages={297--306},
 	year={2010},
-	organization={ACM}
+	month={October},
+	location={Scottsdale, AZ},
 }
 
 @article{Yamamoto:MM'14,
@@ -2547,10 +2549,11 @@ Year={1987}
 @inproceedings{Shin:CDSN'07,
 	title={A framework for architecture-level lifetime reliability modeling},
 	author={Jeonghee Shin and Victor Zyuban and Zhigang Hu and Jude A. Rivers and Pradip Bose},
-	booktitle={Dependable Systems and Networks, 2007. DSN'07. 37th Annual IEEE/IFIP International Conference on},
+	booktitle={Proc. International Conference on Dependable Systems and Networks},
 	pages={534--543},
 	year={2007},
-	organization={IEEE}
+	month={June},
+	location={Edinburgh, UK},
 }
 
 @article{Coskun:JLPE'06,
@@ -2567,10 +2570,11 @@ Year={1987}
 @inproceedings{Huang:SDC'08,
 	title={On modeling the lifetime reliability of homogeneous manycore systems},
 	author={Lin Huang and Qiang Xu},
-	booktitle={Dependable Computing, 2008. PRDC'08. 14th IEEE Pacific Rim International Symposium on},
+	booktitle={Proc. IEEE Pacific Rim International Symposium on Dependable Computing},
 	pages={87--94},
 	year={2008},
-	organization={IEEE}
+	month={December},
+	location={Taipei, Taiwan},
 }
 
 @inproceedings{Wang:ISQED'10,
@@ -2579,7 +2583,8 @@ Year={1987}
 	booktitle=isqed,
 	pages={399--405},
 	year={2010},
-	organization={IEEE}
+	month={March},
+	location={San Jose, CA},
 }
 
 @Article{Skadron:MICRO'03,
