--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -699,6 +699,8 @@ month ={June.},
   booktitle= isca,
   pages={130--141},
   year={2006},
+  month={June},
+  location={Boston, MA},
 }
 
 @inproceedings{Sridhar:ICCAD'10,
@@ -707,17 +709,19 @@ month ={June.},
   booktitle= iccad,
   pages={463--470},
   year={2010},
+  month={November},
+  location={San Jose, CA},
 }
 
 @article{Patti:IEEEPROC'06,
   author={Robert S. Patti},
   title={Three-Dimensional Integrated Circuits and the Future of System-on-Chip Designs},
   journal =  ieeeproc,
+  year={2006},
+  month =  {June},
   volume = {94},
   number = {6},
   pages = {1214--1224},
-  year={2006},
-  month =  {June},
 }
 
 @article{Jung:TCAD'12,
@@ -1725,7 +1729,7 @@ Year={2016}
 	booktitle={Proc. IEEE International Conference on ASIC},
 	pages={618--620},
 	year={2011},
-	month={Oct},
+	month={October},
 	location = {Xiamen, China},
 }
 
@@ -1779,15 +1783,16 @@ Year={2016}
 	publisher={IEEE}
 }
 
-@inproceedings{Srinivasan:ACMSCA'04,
+@inproceedings{Srinivasan:ISCA'04,
 	title={The case for lifetime reliability-aware microprocessors},
 	author={Jayanth Srinivasan and Sarita V. Adve and Pradip Bose and Jude A. Rivers},
-	booktitle={ACM SIGARCH Computer Architecture News},
+	booktitle=isca,
+	year={2004},
+	month={june},
 	volume={32},
 	number={2},
 	pages={276},
-	year={2004},
-	organization={IEEE Computer Society}
+	location={München, Germany},
 }
 
 @inproceedings{Srinivasan:ISCA'05,
@@ -1796,7 +1801,8 @@ Year={2016}
 	booktitle=isca,
 	pages={520--531},
 	year={2005},
-	organization={IEEE}
+	month={June},
+	location={Madison, WI},
 }
 
 @article{Lu:MICRO'05,
