--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -313,6 +313,8 @@ pages = {187--192}
  title = {Temperature-Aware Microarchitecture},
  booktitle = isca,
  year = {2003},
+ month={June},
+ location={San Diego, CA},
  pages = {2--13},
  }
 
@@ -389,6 +391,7 @@ pages = {187--192}
  title = {Multicore Thermal Management with Model Predictive Control},
  booktitle = {Proc. European Conference on Cicuit Theory and Design},
  year = {2009},
+ month={August}
  pages = {90--95},
  location = {Antalya, Turkey},
  }
@@ -493,6 +496,7 @@ pages = {187--192}
  title = {Wattch: A Framework for Architectural-Level Power Analysis and Optimizations},
  booktitle = isca,
  year = {2000},
+ month={June},
  pages = {83--94},
  location = {Vancouver, BC, Canada},
  }
@@ -642,8 +646,10 @@ month ={June.},
   title={Two-phases Parallel Neural Network Algorithm Based on {RPROP}},
   author={Xiong, Zhongyang and Zhang, Yufang and Ou, Ling and Li, Li},
   booktitle={Proc. IEEE TENCON},
-  pages={1--6},
   year={2005},
+  month={November},
+  pages={1--6},
+  location={Melbourne, Australia},
 }
 
 @inproceedings{Zou:DATE'13,
@@ -2234,9 +2240,10 @@ Year={2016}
 	title={Optimizing energy efficiency of {3-D} multicore systems with stacked {DRAM} under power and thermal constraints},
 	author={Jie Meng and Katsutoshi Kawakami and Ayse K Coskun},
 	booktitle=dac,
-	pages={648--655},
 	year={2012},
-	organization={ACM}
+	month={June},
+	pages={648--655},
+	location={San Francisco, CA},
 }
 
 @inproceedings{Pascanu:ICML'13,
