--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -646,7 +646,7 @@ month ={June.},
 @inproceedings{Xiong:TENCON'05,
   title={Two-phases Parallel Neural Network Algorithm Based on {RPROP}},
   author={Xiong, Zhongyang and Zhang, Yufang and Ou, Ling and Li, Li},
-  booktitle={Proc. IEEE Region Ten Conference},
+  booktitle={Proc. IEEE Region Ten Conference (TENCON)},
   year={2005},
   month={November},
   pages={1--6},
