--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -391,7 +391,7 @@ pages = {187--192}
  title = {Multicore Thermal Management with Model Predictive Control},
  booktitle = {Proc. European Conference on Cicuit Theory and Design},
  year = {2009},
- month={August}
+ month={August},
  pages = {90--95},
  location = {Antalya, Turkey},
  }
